menubar using flex

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
             <ul>
                 <li>home</li>
                 <li>course</li>
-                <li>contac us
-                
+                <li>contac-us
                     <div class="w-2">
                     <ul>
                         <li>login</li>
@@ -31,7 +30,7 @@
                     </div>
                     
                 </li>
-                <li>about us</li>
+                <li>about-us</li>
             </ul>
         </div>
     </div>
